# cleaningCar

./: README.md
demo_smarco_robot/: CMakeLists.txt  mainpage.dox  package.xml
demo_smarco_robot/etc/: config.yaml  config.yaml_back
demo_smarco_robot/etc/2/map/: smarco_F2.yaml
demo_smarco_robot/etc/3/fence/: fence.json
demo_smarco_robot/etc/3/initialPose/: pose.json
demo_smarco_robot/etc/3/map/: smarco_F3.yaml
demo_smarco_robot/etc/3/recordPath/: path_3_2023_08_27_20_07_49  path_3_2023_08_27_20_40_40  path_3_2023_08_30_00_45_22  path_3_2023_08_30_00_55_29  path_3_2023_08_30_01_14_47  path_3_2023_08_30_23_43_06  path_3_2023_08_31_00_30_28  path_3_2023_09_06_17_59_09  path_3_2023_09_06_19_56_52
demo_smarco_robot/etc/old_recordPath/: path_3_2023_08_25_01_56_46  record_path.json
demo_smarco_robot/include/demo_smarco_robot/: ftpclient.hpp  main_window.hpp  mytcpclient.hpp  mytcpserver.hpp  mytcpsocket.hpp  prasedata.hpp  qnode.hpp  robot.hpp  serverthread.hpp
demo_smarco_robot/launch/: demo_smarco_robot.launch
demo_smarco_robot/launch/navi/: amcl.launch  map_server.launch  move_base.launch  startNavi.launch
demo_smarco_robot/launch/navi/params/: base_global_planner_param.yaml  common_costmap_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
demo_smarco_robot/msg/: stringVector.msg
demo_smarco_robot/src/: ftpclient.cpp  main.cpp  main_window.cpp  prasedata.cpp  qnode.cpp  robot.cpp
demo_smarco_robot/src/tcp/: mytcpclient.cpp  mytcpserver.cpp  mytcpsocket.cpp  serverthread.cpp
demo_smarco_robot/ui/: main_window.ui
move_base_send_goal/: CMakeLists.txt  package.xml
move_base_send_goal/include/: move_base_goalsending.h
move_base_send_goal/json/: goal.json
move_base_send_goal/launch/: multi_points_navi.launch
move_base_send_goal/src/: move_base_goalsending.cpp
rqt/: 2023-8-30-1.yaml  2023-8-30-2.yaml  2023-8-30-3.yaml  2023-8-30-4.yaml  2023-8-30-5.yaml  2023-8-30-6.yaml  2023-8-30-7.yaml  2023-8-31-1.yaml
rviz/: 2023-8-22.rviz
